correct invisible when dragging

--- a/react-solitaire/src/react/components/Cards/Card.styles.less
+++ b/react-solitaire/src/react/components/Cards/Card.styles.less
@@ -80,3 +80,13 @@
   border: @cardBorderWidth solid white;
   border-radius: @cardBorderRadiusOut;
 }
+
+// ----------------------------------
+// DraggableCard
+.cardIsDragging {
+  opacity: 0;
+}
+
+.cardIsNotDragging {
+  opacity: 1;
+}
